[tool.poetry]
name = "mckit-nuclides"
version = "0.1.0"
description = "\"Python tools to work with elements and isotopes\""
authors = ["dvp <dmitri_portnov@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
uncertainty = "^0.1.1"

[tool.poetry.dev-dependencies]
Pygments = "^2.7.2"
Sphinx = "^3.3.0"
black = "^20.8b1"
codecov = "^2.1.10"
coverage = "^5.3"
darglint = "^1.5.5"
flake8 = "^3.8.4"
flake8-annotations = "^2.4.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.790"
nox = "^2020.12.31"
numpydoc = "^1.1.0"
pre-commit = "^2.8.2"
pytest = "^6.1.2"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
safety = "^1.10.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-autorun = "^1.1.1"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-napoleon = "^0.7"
xdoctest = "^0.15.0"
sphinx-autobuild = "^2020.9.1"
rstcheck = "^3.3.1"
isort = "^5.7.0"
yappi = "^1.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
